Re-works scroll mechanism in sliding tree to handle left-right scrolling with container of any height or fixed height containers that need scrollable overflow.

--- a/src/app/stylesheets/screen.scss
+++ b/src/app/stylesheets/screen.scss
@@ -499,23 +499,39 @@ fieldset {
     width: 449px;
     background-color: #FFF;
 }
-.slider { 
-    
-    h5 {
-      border-bottom: solid 2px #F2F2F2;
-      font-size: 120%;
-      width: 90%;
-      margin-top: 10px;
-      margin-left: 10px;
-    }
-}
+.sliding_container {
+  overflow: hidden;
+  position: relative;
+  width: 448px;
+  border: 1px solid #B5B5B5;
 
+  .sliding_list {
+    width: 896px;
+    position: relative;
+    top: 0;
+    left: 0;
+    border: none !important;
+    
+    .slider {
+        width: 448px;
+        min-height: 450px;
+        float: left;
+        
+        h5 {
+          border-bottom: solid 2px #F2F2F2;
+          font-size: 120%;
+          width: 90%;
+          margin-top: 10px;
+          margin-left: 10px;
+        }
+    }
+  }
+}
 .tree_breadcrumb {
   .slide_link {
     display: inline;
   }
 }
-
 
 /* sync products table */
 .products
@@ -722,10 +738,15 @@ $repo_color: #4A9FB1;
 }
 
 #changeset_tree {
+  $cs-width: 450px;
+  width: $cs-width;
+
   #cslist {
-    height: 415px;
-    overflow-x: hidden;
-    overflow-y: auto;
+    
+    .slider {
+      overflow: auto;
+      height: $cs-width;
+    }
   }
   .breadcrumb_search {
     font-size: 100%;
@@ -751,7 +772,7 @@ $repo_color: #4A9FB1;
         
         input[type="search"] {
           float: right; /* webkit adds an extra padding and makes the widget narrower */
-          width: 450px;
+          width: $cs-width;
           border: 3px solid #436fa8;
         }
 
@@ -767,7 +788,8 @@ $repo_color: #4A9FB1;
     @extend breadcrumb_search;
     background-color: #FEE7C6;
     color: #000;
-    border: 2px solid gray;
+    border: 1px solid $tree-border;
+    border-bottom: none;
   }
   #changeset_users { 
     background-color: $lightkprimary;
